version/0.62/_sources/examples/gallery_examples/00-mapdl-examples/pyvista_mesh.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/gallery_examples/00-mapdl-examples/pyvista_mesh.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_examples_gallery_examples_00-mapdl-examples_pyvista_mesh.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_gallery_examples_00-mapdl-examples_pyvista_mesh.py:


.. _ref_pyvista_mesh:

PyVista Mesh Integration
------------------------

Run a modal analysis on a mesh generated from pyvista within MAPDL.

.. GENERATED FROM PYTHON SOURCE LINES 10-27

.. code-block:: default

    # sphinx_gallery_thumbnail_number = 2

    import os
    import tempfile

    from ansys.mapdl.reader import save_as_archive
    import pyvista as pv

    from ansys.mapdl.core import launch_mapdl

    # launch MAPDL as a service
    mapdl = launch_mapdl(loglevel="ERROR")

    # Create a simple plane mesh centered at (0, 0, 0) on the XY plane
    mesh = pv.Plane(i_resolution=100, j_resolution=100)
    mesh.plot(color="w", show_edges=True)




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_001.png
   :alt: pyvista mesh
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 28-29

Write the mesh to a temporary file

.. GENERATED FROM PYTHON SOURCE LINES 29-61

.. code-block:: default

    archive_filename = os.path.join(tempfile.gettempdir(), "tmp.cdb")
    save_as_archive(archive_filename, mesh)

    # Read in the archive file
    response = mapdl.cdread("db", archive_filename)
    mapdl.prep7()
    print(mapdl.shpp("SUMM"))

    # specify shell thickness
    mapdl.sectype(1, "shell")
    mapdl.secdata(0.01)
    mapdl.emodif("ALL", "SECNUM", 1)

    # specify material properties
    # using aprox values for AISI 5000 Series Steel
    # http://www.matweb.com/search/datasheet.aspx?matguid=89d4b891eece40fbbe6b71f028b64e9e
    mapdl.units("SI")  # not necessary, but helpful for book keeping
    mapdl.mp("EX", 1, 200e9)  # Elastic moduli in Pa (kg/(m*s**2))
    mapdl.mp("DENS", 1, 7800)  # Density in kg/m3
    mapdl.mp("NUXY", 1, 0.3)  # Poissons Ratio
    mapdl.emodif("ALL", "MAT", 1)

    # Run an unconstrained modal analysis
    # for the first 20 modes above 1 Hz
    mapdl.modal_analysis(nmode=20, freqb=1)

    # you could have also run:
    # mapdl.run('/SOLU')
    # mapdl.antype('MODAL')  # default NEW
    # mapdl.modopt('LANB', 20, 1)
    # mapdl.solve()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    SUMMARIZE SHAPE TESTING FOR ALL SELECTED ELEMENTS

     ------------------------------------------------------------------------------
                <<<<<<          SHAPE TESTING SUMMARY           >>>>>>
                <<<<<<        FOR ALL SELECTED ELEMENTS         >>>>>>
     ------------------------------------------------------------------------------
                        --------------------------------------
                        |  Element count     10000 SHELL181  |
                        --------------------------------------

      Test                Number tested  Warning count  Error count    Warn+Err %
      ----                -------------  -------------  -----------    ----------
      Aspect Ratio              10000              0             0         0.00 %
      Parallel Deviation        10000              0             0         0.00 %
      Maximum Angle             10000              0             0         0.00 %
      Jacobian Ratio            10000              0             0         0.00 %
      Warping Factor            10000              0             0         0.00 %

      Any                       10000              0             0         0.00 %
     ------------------------------------------------------------------------------

    *****  ANSYS SOLVE    COMMAND  *****

     *** NOTE ***                            CP =     129.353   TIME= 06:15:06
     There is no title defined for this analysis.                            

     *** NOTE ***                            CP =     129.454   TIME= 06:15:06
     No modes are being expanded (MXPAND command) and therefore the element  
     results will not be written to the mode file.  If you do not intend to  
     use mode selection and for more efficient calculation of element        
     results in the expansion pass of any downstream mode superposition      
     analyses, expand all modes during the modal analysis.                   

     *** SELECTION OF ELEMENT TECHNOLOGIES FOR APPLICABLE ELEMENTS ***
                    ---GIVE SUGGESTIONS ONLY---

     ELEMENT TYPE         4 IS SHELL181. IT IS ASSOCIATED WITH ELASTOPLASTIC 
     MATERIALS ONLY. KEYOPT(8)=2 IS SUGGESTED AND KEYOPT(3)=2 IS SUGGESTED FOR
     HIGHER ACCURACY OF MEMBRANE STRESSES; OTHERWISE, KEYOPT(3)=0 IS SUGGESTED.



     *** ANSYS - ENGINEERING ANALYSIS SYSTEM  RELEASE 2021 R2          21.2BETA ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     06:15:06  APR 05, 2023 CP=    129.478

                                                                               



     ** WARNING: PRE-RELEASE VERSION OF ANSYS 21.2BETA
      ANSYS,INC TESTING IS NOT COMPLETE - CHECK RESULTS CAREFULLY **

                           S O L U T I O N   O P T I O N S

       PROBLEM DIMENSIONALITY. . . . . . . . . . . . .3-D                  
       DEGREES OF FREEDOM. . . . . . UX   UY   UZ   ROTX ROTY ROTZ
       ANALYSIS TYPE . . . . . . . . . . . . . . . . .MODAL                
          EXTRACTION METHOD. . . . . . . . . . . . . .BLOCK LANCZOS
       NUMBER OF MODES TO EXTRACT. . . . . . . . . . .    20
       SHIFT POINT . . . . . . . . . . . . . . . . . .  1.0000    
       GLOBALLY ASSEMBLED MATRIX . . . . . . . . . . .SYMMETRIC  

     *** WARNING ***                         CP =     129.500   TIME= 06:15:06
     No constraints have been defined using the D command.                   

     *** NOTE ***                            CP =     129.500   TIME= 06:15:06
     The step data was checked and warning messages were found.              
      Please review output or errors file ( /file.err ) for these warning    
     messages.                                                               

     *** NOTE ***                            CP =     129.500   TIME= 06:15:06
     The conditions for direct assembly have been met.  No .emat or .erot    
     files will be produced.                                                 

                          L O A D   S T E P   O P T I O N S

       LOAD STEP NUMBER. . . . . . . . . . . . . . . .     1
       THERMAL STRAINS INCLUDED IN THE LOAD VECTOR . .   YES



                             ***********  PRECISE MASS SUMMARY  ***********

       TOTAL RIGID BODY MASS MATRIX ABOUT ORIGIN
                   Translational mass               |   Coupled translational/rotational mass
             78.000        0.0000      -0.48842E-30 |   -0.17755E-33  -0.17959E-31   0.20817E-16
             0.0000        78.000        0.0000     |    0.13915E-31    0.0000       0.70300E-15
           -0.48238E-30    0.0000        78.000     |    0.53776E-15  -0.68391E-15  -0.54477E-33
         ------------------------------------------ | ------------------------------------------
                                                    |         Rotational mass (inertia)
                                                    |     6.5006       0.22335E-16   0.72143E-15
                                                    |   -0.27105E-16    6.5006       0.61389E-32
                                                    |    0.72143E-15  -0.12037E-32    12.999    

       TOTAL MASS =  78.000    
         The mass principal axes coincide with the global Cartesian axes

       CENTER OF MASS (X,Y,Z)=   0.90128E-17  -0.26688E-18  -0.23025E-33

       TOTAL INERTIA ABOUT CENTER OF MASS
             6.5006       0.22335E-16   0.72143E-15
            0.22335E-16    6.5006       0.61389E-32
            0.72143E-15   0.61389E-32    12.999    
         The inertia principal axes coincide with the global Cartesian axes


      *** MASS SUMMARY BY ELEMENT TYPE ***

      TYPE      MASS
         4   78.0000    

     Range of element maximum matrix coefficients in global coordinates
     Maximum = 749504998 at element 9504.                                    
     Minimum = 749503915 at element 9505.                                    

       *** ELEMENT MATRIX FORMULATION TIMES
         TYPE    NUMBER   ENAME      TOTAL CP  AVE CP

            4     10000  SHELL181      1.080   0.000108
     Time at end of element matrix formulation CP = 130.847473.              

      BLOCK LANCZOS CALCULATION OF UP TO    20 EIGENVECTORS.
      NUMBER OF EQUATIONS              =        61206
      MAXIMUM WAVEFRONT                =           36
      MAXIMUM MODES STORED             =           20
      MINIMUM EIGENVALUE               =  0.10000E+01
      MAXIMUM EIGENVALUE               =  0.10000E+31

      Memory allocated for solver              =   187.192 MB
      Memory required for in-core solution     =   178.612 MB
      Memory required for out-of-core solution =    60.617 MB

     *** NOTE ***                            CP =     132.727   TIME= 06:15:09
     The Sparse Matrix Solver used by the Block Lanczos eigensolver is       
     currently running in the in-core memory mode.  This memory mode uses    
     the most amount of memory in order to avoid using the hard drive as     
     much as possible, which most often results in the fastest solution      
     time.  This mode is recommended if enough physical memory is present    
     to accommodate all of the solver data.                                  

     *** ANSYS - ENGINEERING ANALYSIS SYSTEM  RELEASE 2021 R2          21.2BETA ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     06:15:10  APR 05, 2023 CP=    135.890

                                                                               



     ** WARNING: PRE-RELEASE VERSION OF ANSYS 21.2BETA
      ANSYS,INC TESTING IS NOT COMPLETE - CHECK RESULTS CAREFULLY **

     *** FREQUENCIES FROM BLOCK LANCZOS ITERATION ***

      MODE    FREQUENCY (HERTZ)      


       FREQUENCY RANGE REQUESTED=   20 MODES ABOVE   1.00000     HERTZ

        1     32.74664192985    
        2     47.77804288730    
        3     59.17108298360    
        4     84.60790505173    
        5     84.60790505209    
        6     148.8927748648    
        7     148.8927748650    
        8     154.6519861746    
        9     168.3840411459    
       10     187.7790667340    
       11     255.9751634914    
       12     255.9751634916    
       13     285.2444050791    
       14     298.2943388368    
       15     319.8023401634    
       16     319.8023401642    
       17     370.6023621796    
       18     391.8457651362    
       19     409.1039880850    
       20     482.6516135508    

     *** ANSYS - ENGINEERING ANALYSIS SYSTEM  RELEASE 2021 R2          21.2BETA ***
     Ansys Mechanical Enterprise                       
     00000000  VERSION=LINUX x64     06:15:11  APR 05, 2023 CP=    136.198

                                                                               



     ** WARNING: PRE-RELEASE VERSION OF ANSYS 21.2BETA
      ANSYS,INC TESTING IS NOT COMPLETE - CHECK RESULTS CAREFULLY **



              ***** PARTICIPATION FACTOR CALCULATION *****  X  DIRECTION
                                                                                      CUMULATIVE     RATIO EFF.MASS
      MODE   FREQUENCY       PERIOD      PARTIC.FACTOR     RATIO    EFFECTIVE MASS   MASS FRACTION   TO TOTAL MASS
         1     32.7466       0.30537E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         2     47.7780       0.20930E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         3     59.1711       0.16900E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         4     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         5     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         6     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         7     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         8     154.652       0.64661E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         9     168.384       0.59388E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        10     187.779       0.53254E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        11     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        12     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        13     285.244       0.35058E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        14     298.294       0.33524E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        15     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        16     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        17     370.602       0.26983E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        18     391.846       0.25520E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        19     409.104       0.24444E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        20     482.652       0.20719E-02    0.0000        0.000000     0.00000         0.00000         0.00000    



              ***** PARTICIPATION FACTOR CALCULATION *****  Y  DIRECTION
                                                                                      CUMULATIVE     RATIO EFF.MASS
      MODE   FREQUENCY       PERIOD      PARTIC.FACTOR     RATIO    EFFECTIVE MASS   MASS FRACTION   TO TOTAL MASS
         1     32.7466       0.30537E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         2     47.7780       0.20930E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         3     59.1711       0.16900E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         4     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         5     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         6     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         7     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         8     154.652       0.64661E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         9     168.384       0.59388E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        10     187.779       0.53254E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        11     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        12     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        13     285.244       0.35058E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        14     298.294       0.33524E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        15     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        16     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        17     370.602       0.26983E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        18     391.846       0.25520E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        19     409.104       0.24444E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        20     482.652       0.20719E-02    0.0000        0.000000     0.00000         0.00000         0.00000    



              ***** PARTICIPATION FACTOR CALCULATION *****  Z  DIRECTION
                                                                                      CUMULATIVE     RATIO EFF.MASS
      MODE   FREQUENCY       PERIOD      PARTIC.FACTOR     RATIO    EFFECTIVE MASS   MASS FRACTION   TO TOTAL MASS
         1     32.7466       0.30537E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         2     47.7780       0.20930E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         3     59.1711       0.16900E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         4     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         5     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         6     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         7     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         8     154.652       0.64661E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         9     168.384       0.59388E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        10     187.779       0.53254E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        11     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        12     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        13     285.244       0.35058E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        14     298.294       0.33524E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        15     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        16     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        17     370.602       0.26983E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        18     391.846       0.25520E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        19     409.104       0.24444E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        20     482.652       0.20719E-02    0.0000        0.000000     0.00000         0.00000         0.00000    



              ***** PARTICIPATION FACTOR CALCULATION *****ROTX DIRECTION
                                                                                      CUMULATIVE     RATIO EFF.MASS
      MODE   FREQUENCY       PERIOD      PARTIC.FACTOR     RATIO    EFFECTIVE MASS   MASS FRACTION   TO TOTAL MASS
         1     32.7466       0.30537E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         2     47.7780       0.20930E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         3     59.1711       0.16900E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         4     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         5     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         6     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         7     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         8     154.652       0.64661E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         9     168.384       0.59388E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        10     187.779       0.53254E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        11     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        12     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        13     285.244       0.35058E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        14     298.294       0.33524E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        15     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        16     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        17     370.602       0.26983E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        18     391.846       0.25520E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        19     409.104       0.24444E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        20     482.652       0.20719E-02    0.0000        0.000000     0.00000         0.00000         0.00000    



              ***** PARTICIPATION FACTOR CALCULATION *****ROTY DIRECTION
                                                                                      CUMULATIVE     RATIO EFF.MASS
      MODE   FREQUENCY       PERIOD      PARTIC.FACTOR     RATIO    EFFECTIVE MASS   MASS FRACTION   TO TOTAL MASS
         1     32.7466       0.30537E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         2     47.7780       0.20930E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         3     59.1711       0.16900E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         4     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         5     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         6     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         7     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         8     154.652       0.64661E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         9     168.384       0.59388E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        10     187.779       0.53254E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        11     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        12     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        13     285.244       0.35058E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        14     298.294       0.33524E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        15     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        16     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        17     370.602       0.26983E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        18     391.846       0.25520E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        19     409.104       0.24444E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        20     482.652       0.20719E-02    0.0000        0.000000     0.00000         0.00000         0.00000    



              ***** PARTICIPATION FACTOR CALCULATION *****ROTZ DIRECTION
                                                                                      CUMULATIVE     RATIO EFF.MASS
      MODE   FREQUENCY       PERIOD      PARTIC.FACTOR     RATIO    EFFECTIVE MASS   MASS FRACTION   TO TOTAL MASS
         1     32.7466       0.30537E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         2     47.7780       0.20930E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         3     59.1711       0.16900E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         4     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         5     84.6079       0.11819E-01    0.0000        0.000000     0.00000         0.00000         0.00000    
         6     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         7     148.893       0.67162E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         8     154.652       0.64661E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
         9     168.384       0.59388E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        10     187.779       0.53254E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        11     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        12     255.975       0.39066E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        13     285.244       0.35058E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        14     298.294       0.33524E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        15     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        16     319.802       0.31269E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        17     370.602       0.26983E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        18     391.846       0.25520E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        19     409.104       0.24444E-02    0.0000        0.000000     0.00000         0.00000         0.00000    
        20     482.652       0.20719E-02    0.0000        0.000000     0.00000         0.00000         0.00000    


     *** ANSYS BINARY FILE STATISTICS
      BUFFER SIZE USED= 16384
           19.250 MB WRITTEN ON ASSEMBLED MATRIX FILE: file.full
           26.938 MB WRITTEN ON MODAL MATRIX FILE: file.mode



.. GENERATED FROM PYTHON SOURCE LINES 62-63

Load the result file within ``pyansys`` and plot the 8th mode.

.. GENERATED FROM PYTHON SOURCE LINES 63-68

.. code-block:: default

    result = mapdl.result
    print(result)

    result.plot_nodal_displacement(7, show_displacement=True, displacement_factor=0.4)




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_002.png
   :alt: pyvista mesh
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    PyMAPDL Result
    Units       : User Defined
    Version     : 21.2
    Cyclic      : False
    Result Sets : 20
    Nodes       : 10201
    Elements    : 10000


    Available Results:
    NSL : Nodal displacements





.. GENERATED FROM PYTHON SOURCE LINES 69-70

plot the 1st mode using contours

.. GENERATED FROM PYTHON SOURCE LINES 70-74

.. code-block:: default

    result.plot_nodal_displacement(
        0, show_displacement=True, displacement_factor=0.4, n_colors=10
    )




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_003.png
   :alt: pyvista mesh
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_003.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 75-79

Animate a high frequency mode

Get a smoother plot by disabling movie_filename and increasing ``nangles``.
Enable a continuous plot looping with ```loop=True```.

.. GENERATED FROM PYTHON SOURCE LINES 79-91

.. code-block:: default


    result.animate_nodal_displacement(
        18,
        loop=False,
        add_text=False,
        nangles=30,
        displacement_factor=0.4,
        show_axes=False,
        background="w",
        movie_filename="plane_vib.gif",
    )




.. image-sg:: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_004.png
   :alt: pyvista mesh
   :srcset: /examples/gallery_examples/00-mapdl-examples/images/sphx_glr_pyvista_mesh_004.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.8.16/x64/lib/python3.8/site-packages/ansys/mapdl/reader/rst.py:994: UserWarning: The ``nangles`` kwarg is depreciated and ``n_frames`` should be used instead.
      warnings.warn('The ``nangles`` kwarg is depreciated and ``n_frames`` '
    Rendering animation:   0%|          | 0/30 [00:00<?, ?it/s]    Rendering animation:   3%|3         | 1/30 [00:00<00:04,  6.50it/s]    Rendering animation:   7%|6         | 2/30 [00:00<00:04,  6.90it/s]    Rendering animation:  10%|#         | 3/30 [00:00<00:04,  6.50it/s]    Rendering animation:  13%|#3        | 4/30 [00:00<00:03,  6.60it/s]    Rendering animation:  17%|#6        | 5/30 [00:00<00:03,  6.60it/s]    Rendering animation:  20%|##        | 6/30 [00:00<00:03,  6.63it/s]    Rendering animation:  23%|##3       | 7/30 [00:01<00:03,  6.55it/s]    Rendering animation:  27%|##6       | 8/30 [00:01<00:03,  6.54it/s]    Rendering animation:  30%|###       | 9/30 [00:01<00:03,  6.58it/s]    Rendering animation:  33%|###3      | 10/30 [00:01<00:03,  6.61it/s]    Rendering animation:  37%|###6      | 11/30 [00:01<00:02,  6.66it/s]    Rendering animation:  40%|####      | 12/30 [00:01<00:02,  6.61it/s]    Rendering animation:  43%|####3     | 13/30 [00:01<00:02,  6.62it/s]    Rendering animation:  47%|####6     | 14/30 [00:02<00:02,  6.70it/s]    Rendering animation:  50%|#####     | 15/30 [00:02<00:02,  6.73it/s]    Rendering animation:  53%|#####3    | 16/30 [00:02<00:02,  6.29it/s]    Rendering animation:  57%|#####6    | 17/30 [00:02<00:01,  6.55it/s]    Rendering animation:  60%|######    | 18/30 [00:02<00:01,  6.30it/s]    Rendering animation:  63%|######3   | 19/30 [00:02<00:01,  6.40it/s]    Rendering animation:  67%|######6   | 20/30 [00:03<00:01,  6.52it/s]    Rendering animation:  70%|#######   | 21/30 [00:03<00:01,  6.52it/s]    Rendering animation:  73%|#######3  | 22/30 [00:03<00:01,  6.70it/s]    Rendering animation:  77%|#######6  | 23/30 [00:03<00:01,  6.88it/s]    Rendering animation:  80%|########  | 24/30 [00:03<00:00,  7.02it/s]    Rendering animation:  83%|########3 | 25/30 [00:03<00:00,  7.07it/s]    Rendering animation:  87%|########6 | 26/30 [00:03<00:00,  7.11it/s]    Rendering animation:  90%|######### | 27/30 [00:04<00:00,  7.18it/s]    Rendering animation:  93%|#########3| 28/30 [00:04<00:00,  6.92it/s]    Rendering animation:  97%|#########6| 29/30 [00:04<00:00,  6.88it/s]    Rendering animation: 100%|##########| 30/30 [00:04<00:00,  6.90it/s]    Rendering animation: 100%|##########| 30/30 [00:04<00:00,  6.47it/s]

    [(1.5773502691896262, 1.5773502691896262, 1.5773502691896262),
     (0.0, 0.0, 0.0),
     (0.0, 0.0, 1.0)]



.. GENERATED FROM PYTHON SOURCE LINES 92-93

stop mapdl

.. GENERATED FROM PYTHON SOURCE LINES 93-94

.. code-block:: default

    mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  10.413 seconds)


.. _sphx_glr_download_examples_gallery_examples_00-mapdl-examples_pyvista_mesh.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: pyvista_mesh.py <pyvista_mesh.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: pyvista_mesh.ipynb <pyvista_mesh.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
